--- a/css/main.css
+++ b/css/main.css
@@ -32,43 +32,18 @@ body {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-/*
-button {
-    background-color: black;
-    font-size: 25px;
-    border: none;
-    color: white;
-    padding: 18px 36px;
-    text-decoration: none;
-    margin: 5px 4px;
-    border-radius: 2px;
-    cursor: pointer;
-    position: fixed;
-}
-*/
 
 button {
   background-color: black;
   border: white;
   color: white;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
   margin: 4px 2px;
   border-radius: 8px;
   position: fixed;
 }
-
-/*
-img {
-  height:100%;
-  width:100%;
-  object-fit: contain;
-  margin-top: 10px;
-}
-*/
 
 .main{
   border: 2px solid #dddddd;
@@ -99,4 +74,25 @@ img {
 
 .ourright {
   display: solid;
+}
+
+.buttons {
+  display:flex;
+  justify-content:flex-end;
+  align-items:center;
+  padding: 20px;
+}
+
+.btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 12px 20px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.btn:hover {
+  background-color: white;
+  color: black;
 }
