--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,10 @@ button {
   text-align: center;
   text-decoration: none;
   margin: 4px 2px;
-  border-radius: 8px;
+  border-radius: 5px;
   position: fixed;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .main{
