--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 }
 
+.thumbnailsleft img{
+  width: 35px;
+  height: 35px;
+  margin: 1px;
+  cursor: pointer;
+  object-fit: cover;
+  object-position: center;
+}
+
+.thumbnailsright img{
+  width: 35px;
+  height: 35px;
+  margin: 1px;
+  cursor: pointer;
+  object-fit: cover;
+  object-position: center;
+}
 
 .split {
   height: 100%;
@@ -23,8 +40,6 @@ body {
   background-color: blue;
 }
 
-
-
 .centered {
   position: absolute;
   top: 50%;
@@ -34,6 +49,7 @@ body {
 }
 
 button {
+  margin: 5px;
   background-color: black;
   border: white;
   color: white;
@@ -63,19 +79,30 @@ input[type=checkbox] {
   height: 40px;
 }
 
-img {
+.info img {
   border: 2px solid #dddddd;
   border-radius: 4px;
-  width: 100px;
+  width: 200px;
+  height: 130px;
   margin-top: 10px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .ourleft {
+  height: 250px:
+  width: 350px;
   display: solid;
+  margin: 10px;
+  padding: 10px;
 }
 
 .ourright {
+  height: 250px:
+  width: 350px;
   display: solid;
+  margin: 10px;
+  padding: 10px;
 }
 
 .buttons {
@@ -98,3 +125,5 @@ img {
   background-color: white;
   color: black;
 }
+
+
