--- a/css/main.css
+++ b/css/main.css
@@ -2,23 +2,52 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
 }
 
+.thumbnailsleft {
+  display: flex;
+  flex-direction: row;
+  border: 3px solid black;
+  vertical-align: middle;
+}
+
 .thumbnailsleft img{
   width: 35px;
   height: 35px;
-  margin: 1px;
   cursor: pointer;
+  margin: 2px;
   object-fit: cover;
   object-position: center;
+}
+
+.thumbnailsleft .ghost {
+  width: 35px;
+  height: 35px;
+  font-weight: bold;
+  border: 3px dashed black;
+}
+
+.thumbnailsright {
+  display: flex;
+  flex-direction: row;
+  border: 3px solid black;
 }
 
 .thumbnailsright img{
   width: 35px;
   height: 35px;
-  margin: 1px;
   cursor: pointer;
+  margin: 2px;
   object-fit: cover;
   object-position: center;
 }
+
+
+.thumbnailsright .ghost {
+  width: 35px;
+  height: 35px;
+  font-weight: bold;
+  border: 3px dashed black;
+}
+
 
 .split {
   height: 100%;
@@ -104,6 +133,15 @@ input[type=checkbox] {
   padding: 10px;
 }
 
+.ourleft .ghost {
+  height: 250px:
+  width: 350px;
+  font-size: 35px;
+  font-weight: bold;
+  border: 3px dashed black;
+}
+
+
 .ourright {
   height: 250px:
   width: 350px;
@@ -143,4 +181,5 @@ input[type=checkbox] {
   background-color: white;
   color: black;
 }
+
 
